# exqudens-conan-gtest

./: CMakeLists.txt  CMakePresets.json  build-conanfile.py  conanfile.py  name-version.txt  readme.md
cmake/: util.cmake
src/test/cpp/: TestApplication.cpp  TestUtils.cpp
src/test/cpp/unit/: FunctionalUnitTests.hpp
src/test/resources/vscode/: gdb-launch.json
